# portfolio

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
portfolio/base/: models.py
portfolio/base/migrations/: 0001_initial.py  0002_footertext.py  0003_formpage_formfield.py
portfolio/base/templates/base/: form_page.html  form_page_landing.html
portfolio/base/templates/base/blocks/: card_block.html  cards_block.html  heading_block.html
portfolio/home/: models.py
portfolio/home/migrations/: 0003_homepage_body.py  0004_customize_the_home_page.py  0005_convert_body_to_streamfield.py
portfolio/home/templates/home/: home_page.html
portfolio/portfolio/: wsgi.py
portfolio/portfolio/settings/: base.py  dev.py
portfolio/portfolio/static/css/: portfolio.css
portfolio/portfolio/templates/: base.html  nav.html
portfolio/portfolio/templates/includes/: footer.html
portfolio/resume/: models.py
portfolio/resume/migrations/: 0001_initial.py
portfolio/resume/templates/resume/: resume_page.html
portfolio/static/: staticfiles.json
portfolio/static/wagtailadmin/css/: core.7f0a76d7fc00.css
